feat: 实现了列内容点击后统一抛出点击事件的效果

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
-    "element-plus": "^1.2.0-beta.3"
+    "element-plus": "^1.2.0-beta.3",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
